@@ -63,6 +63,9 @@ Scheme read-eval-print loop.
 \fB-h\fR, \fB--help\fR
 Print a help message.
 .TP 8
+\fB-V\fR, \fB--version\fR
+Print \fBgnetlist\fR version information.
+.TP 8
 \fB--\fR
 Treat all remaining arguments as schematic filenames.  Use this if you
 have a schematic filename which begins with `-'.
